Fix header position on iOS after message input focus

--- a/backend/node-express/public/css/groops.css
+++ b/backend/node-express/public/css/groops.css
@@ -34,6 +34,7 @@ td.centered {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  position: static;
 }
 #room .grp-room-name {
   font-size: 20px;
